# email-ai-backend

./: .cursor_rules   .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  secret_key.py  technical-specification.md
alembic/: env.py
alembic/versions/: 6053dbc63630_add_user_id_in_gmail_account.py  68e5a149bc98_add_status_in_email_thread.py  ab414e9ea80c_cteate_start_tables.py  b34ea8f91ea4_cteate_start_tables.py  c50a85e97075_add_name_capabilities_assistant_profiles.py  cf0b62c5f377_add_instructions_in_email_thread.py  ea8d43315a18_update_oauth_and_add_gmail_account.py  fccb03319954_add_relationship_users_gmail_account.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 18779c01ccb1_create_user_model.py  2c1be823de42_create_message_history_table.py  46fc4cbe8573_create_user_table.py  4801b51f92c9_update_user_password_optional.py  589cb5ebc5f2_create_user_table.py  5f48011265c6_create_oauthcredentials_table.py  66ca079fc6c0_create_email_threads_table.py  689036ddca98_create_tables.py  6fc276a2c60d_create_tables.py  795a03901b97_create_emailmessage_table.py  8667fa0fb36b_create_contact_table.py  8a755202f867_create_tables.py  8becdd91a585_create_user_table.py  9cbf2dc292d9_create_user_model.py  a21bd03af3e0_create_user_table.py  b1491645b30d_create_emailthread_table.py  c2e4cabe28d5_create_tables.py  c6a239ed3663_ccreate_oauth_credentials_table.py  d32afa419428_create_tables.py  ea4740fa6363_create_tables.py  f09614ebc2e3_create_tables.py  (+2 more)
app/core/: config.py  dependency.py  error_handlers.py  exception_handler.py  exceptions.py  logger.py  logging_config.py  middleware.py  security.py
app/dependencies/: dependency.py
app/endpoints/: api.py  api_endpoint.py  email_assistant.py  email_endpoints.py  oauth.py  oauth_endpoint.py  open_ai_threads_endpoint.py  user.py  user_endpoint.py
app/models/: __init__.py  assistant.py  assistant_profile.py  base.py  email_message.py  email_thread.py  email_threads.py  gmail_thread.py  oauth_credentials.py  open_ai_thread.py  user.py
app/repositories/: assistant_profile_repository.py  assistant_repository.py  auth_repository.py  email_message_repository.py  email_thread_repository.py  gmail_thread_repository.py  oauth_credentials_repository.py  open_ai_thread_repository.py  user_repository.py
app/schemas/: assistant_profile_schema.py  auth.py  email_message_schema.py  email_schemas.py  email_thread_schema.py  oauth_credentials_schema.py  open_ai_thread_schema.py  user_schema.py  user_schemas.py
app/services/: assistant_profile_service.py  assistant_service.py  auth_service.py  email_service.py  email_thread_service.py  gmail_service.py  gmail_thread_service.py  google_service.py  oauth_service.py  open_ai_service.py  open_ai_thread_service.py  openai_service.py  token_service.py  user_service.py
app/utils/: gmail_auth.py  oauth_verification.py  security.py
config/: base.py  development.py  production.py  test.py
core/: dependency_injection.py  exception_handler.py  logger.py  settings.py
tests/: conftest.py
tests/services/: test_gmail_service.py
(+89 files in other folders)
