[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nullcharge", email = "nullagent07@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.3",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.9.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.0",
    "greenlet>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "requests>=2.32.3",
    "openai>=1.52.2",
    "python-json-logger>=2.0.7",
    "uvicorn>=0.32.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
