[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nullcharge", email = "nullagent07@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.3",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.9.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.0",
    "greenlet>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "requests>=2.32.3",
    "openai>=1.52.2",
    "python-json-logger>=2.0.7",
    "uvicorn>=0.32.0",
    "python-jose[cryptography]>=3.3.0",
    "aiohttp>=3.10.10",
    "bcrypt>=4.2.0",
    "passlib>=1.7.4",
    "google-api-python-client>=2.151.0",
    "fastapi-mail>=1.4.1",
    "Levenshtein>=0.26.1",
    "loguru>=0.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1",
    "aiosqlite>=0.19.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_default_fixture_loop_scope = "function"
