[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nullcharge", email = "nullagent07@gmail.com"},
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic[email]>=2.10.3",
    "alembic==1.14.0",
    "pydantic-settings==2.4.0",
    "python-json-logger==2.0.7",
    "sqlalchemy==2.0.34",
    "asyncpg==0.29.0",
    "aiohttp==3.10.5",
    "greenlet>=3.1.1",
    "authlib>=1.3.2",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "openai>=1.57.2",
    "google-cloud-pubsub==2.27.1",
]
requires-python = "==3.12.4"
readme = "README.md"
license = {text = "Proprietary"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
